--- a/Social Media Link Prediction.ipynb
+++ b/Social Media Link Prediction.ipynb
@@ -745,21 +745,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature engineering continued..."
+    "## Feature engineering continued..."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Similarity measures"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Jaccard Distance:"
+    "### Jaccard Distance - similarity measure feature"
    ]
   },
   {
@@ -802,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cosine Distance"
+    "### Cosine Distance - Similarity measure feature"
    ]
   },
   {
@@ -954,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adar/Adamic Index"
+    "### Adar/Adamic Index feature"
    ]
   },
   {
@@ -976,6 +969,64 @@
     "            return 0\n",
     "    except:\n",
     "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Follows back feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def follows_back(a,b):\n",
+    "    if train_graph.has_edge(b,a):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hits Score feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hits = nx.hits(train_graph, max_iter=100, tol=1e-08, nstart=None, normalized=True)\n",
+    "pickle.dump(hits,open('data/fea_sample/hits.p','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min 0.0\n",
+      "max 0.8674948784226775\n",
+      "mean 2.203079905708183e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('min',hits[0][min(hits[0], key=hits[0].get)])\n",
+    "print('max',hits[0][max(hits[0], key=hits[0].get)])\n",
+    "print('mean',float(sum(hits[0].values())) / len(hits[0]))"
    ]
   },
   {
